# bitrix-docs-new

./: .gitignore  AGENT.md  QUICKSTART.md  README.md  metadata.json  url_mapping.json
docs/: AGENT.md  INDEX.md  MAIN_INDEX.md  MODULES.md  QUICK_REFERENCE.md  RAG_ACCEPTANCE.md  RAG_PARAMETERS.md  RAG_PLAN.md  RAG_PROJECT_STRUCTURE.md  RAG_QUESTIONNAIRE.md  RAG_RISKS.md  RAG_TEST_SET.md  api_documentation.md
docs/RAG/: RAG_PARAMETERS.md  RAG_PLAN.md  RAG_PROJECT_STRUCTURE.md  RAG_QUESTIONNAIRE.md  (+3 more)
images/: aa1f2740a3.php
notebooks/: bge_endpoints_colab.ipynb
rag/: .env.example  README.md  docker-compose.yml  pyproject.toml
rag/scripts/: run_with_ngrok.sh
rag/src/bitrix_rag/: cli.py  config.py
rag/src/bitrix_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rag/src/bitrix_rag/api/: main.py
rag/src/bitrix_rag/clients/: bge.py  openai_client.py
rag/src/bitrix_rag/index/: bm25.py  build.py  qdrant_store.py  vector_index.py
rag/src/bitrix_rag/ingest/: chunker.py  loader.py  metadata.py  pipeline.py
rag/src/bitrix_rag/retrieval/: hybrid.py  rag.py  router.py
scripts/: cleanup_all_new_docs.py  cleanup_courses.py  cleanup_docs.py  cleanup_docs_v2.py  create_navigation.py  fix_all_links.py  fix_duplicate_headers.py  fix_index.py  fix_links.py  generate_index.py  normalize_courses_md.py  normalize_php_md.py  parse_bitrix24_api.py  parse_complete.py  parse_courses.py  parse_d7.py  parse_docs.py  parse_docs_full.py  parse_user_help.py  refetch_empty_php_md.py  remove_footers.py  update_b24_rest_docs.sh  vault_maintenance.py
(+3527 files in other folders)
